# cuda_fractal

./: CMakeLists.txt  conandata.yml  kernel.cu  main.cpp
